[VIT-5821] Fallback birth date support

--- a/docs/api-reference/user/patch-user.mdx
+++ b/docs/api-reference/user/patch-user.mdx
@@ -12,7 +12,8 @@ curl --request POST \
      --header 'Content-Type: application/json' \
      --data '
 {
-     "fallback_time_zone": "Europe/London"
+     "fallback_time_zone": "Europe/London",
+     "fallback_birth_date" "1980-03-13"
 }
 '
 ```
