--- a/docs/wearables/sdks/vital-core.mdx
+++ b/docs/wearables/sdks/vital-core.mdx
@@ -94,13 +94,13 @@ The SDK normally reports one of the following status combinations:
   ```typescript React Native
   import { VitalCore } from "@tryvital/vital-core-react-native";
 
-  await VitalCore.cleanUp();
+  await VitalCore.status();
   ```
 
   ```dart Flutter
   import 'package:vital_core/vital_core.dart' as vital_core;
 
-  await vital_core.cleanUp();
+  await vital_core.clientStatus();
   ```
 </CodeGroup>
 
