Update Event Catalog from 4233dc5eb60948278d2ae1e0c2e8ac808cdc8793

--- a/docs/event-catalog/labtest.order.created.mdx
+++ b/docs/event-catalog/labtest.order.created.mdx
@@ -284,7 +284,7 @@ Shipping Details. For unregistered testkit orders.
 </Expandable>
 </ResponseField>
 <ResponseField name="activate_by" type="string | null">
-Defines when an Order should be activated, making it a Delayed Order.
+Schedule an Order to be processed in a future date.
 </ResponseField>
 </Expandable>
 </ResponseField>
@@ -294,9 +294,9 @@ Defines when an Order should be activated, making it a Delayed Order.
 {
   "event_type": "labtest.order.created",
   "data": {
-    "id": "9cc5cafb-de7a-4dee-ac29-4cbec81c0db4",
-    "team_id": "2facd519-b756-4fcd-9c48-41122df26f5f",
-    "user_id": "e895de0e-952c-49d9-88ba-aa5d9df72b7e",
+    "id": "f2ec13f3-3619-4a0a-a91e-05fd2345a0a0",
+    "team_id": "4aafc540-5fd6-4b90-8b63-251f7e4bb759",
+    "user_id": "00551d6f-3db5-42b4-8fed-9513de505850",
     "patient_details": {
       "dob": "2020-01-01",
       "gender": "male"
@@ -337,7 +337,7 @@ Defines when an Order should be activated, making it a Delayed Order.
       "method": "testkit"
     },
     "sample_id": "123456789",
-    "health_insurace_id": "efa545bd-361c-4c88-a5a1-62b084a18760",
+    "health_insurace_id": "172917e8-a3c3-43cd-86cd-588de3e63954",
     "requisition_form_url": "https://www.example.com",
     "notes": "This is a note",
     "created_at": "2020-01-01T00:00:00Z",
