--- a/docs/wearables/guides/android_health_connect.mdx
+++ b/docs/wearables/guides/android_health_connect.mdx
@@ -2,9 +2,10 @@
 title: "Android Health Connect"
 ---
 
-Android Health Connect is an SDK-based provider. This means that you access your user's wearable data by embedding either our [Native Android](/wearables/sdks/android), [Flutter](/wearables/sdks/flutter) or [React Native](/wearables/sdks/react_native) SDK into your own Android app. We have a guide for each of these SDKs that you should follow for more detail.
+Android Health Connect is an SDK-based provider. Your Android consumer app would embed the Vital Mobile SDKs on a supported
+stack. Data are then pulled from the Health Connect data store on the user's Android device.
 
-## Configure your App Manifest
+## Configure your AndroidManifest.xml
 
 ### Health Connect privacy dialogue
 
@@ -85,29 +86,24 @@ For example, if you intend to sync Blood Pressure records and Blood Glucose reoc
 
 ### Foreground Service permissions
 
-If you intend to enable the "Ensure data sync can run to completion" feature as mentioned below, you must make the following Foreground Service declarations in your App Manifest:
+Vital Health SDK runs all its data sync workers inside a short-service Foreground Services.
 
-```xml
-<manifest ...>
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+At build time, Vital Health SDK injects all the required `shortService` Foreground Services declarations
+into your AndroidManifest.xml. You need not modify your app's Manifest to enable this.
 
-    <application ...>
-        <!-- BEGIN: Mandatory for running Health Connect as foreground service on Android 14+ -->
-        <service
-            android:name="androidx.work.impl.foreground.SystemForegroundService"
-            android:foregroundServiceType="shortService"
-            android:exported="false">
-        </service>
-        <!-- END: Mandatory for running Health Connect as foreground service on Android 14+ -->
-    </application>
-</manifest>
-```
+<Info>
+Vital Health SDK can run work inside the [AndroidX WorkManager](https://developer.android.com/develop/background-work/background-tasks/persistent/how-to/long-running#declare-foreground-service-types-manifest)
+foregorund service, as well as our own `SyncOnExactAlarmService`. The merged AndroidManifest.xml of your app
+would include both of them.
+</Info>
+
 
 ## Prepare your app architecture
 
 <Warning>Incompliance to the guidelines below may result in Health Connect permission flow failing to launch on specific Android OS versions.</Warning>
 
-### Native Android
+<Tabs>
+<Tab title="Native Android">
 
 When requesting permission using the `ActivityResultContract` created by Vital Health `createPermissionRequestContract()`, you must launch
 the contract using AndroidX Activity Result API.
@@ -115,7 +111,9 @@ the contract using AndroidX Activity Result API.
 Attempts to launch the contract manually via the legacy `Activity.startActivityForResult` API would result in an `android.content.ActivityNotFoundException`
 exception on Android 14 and later.
 
-### React Native
+</Tab>
+
+<Tab title="React Native">
 
 The `MainActivity` of your Android host app project must be augmented with either of the two options below:
 
@@ -147,46 +145,65 @@ open class MainActivity: ReactActivity() {
 The argumentation above is a workaround to React Native internals AndroidX-incompatible handling of permission request result callbacks,
 which breaks the AndroidX Activity Result API required by Android Health Connect.
 
-### Flutter
+</Tab>
+<Tab title="Flutter">
 
 The `MainActivity` of your Android host app project must subclass `FlutterFragmentActivity` instead of `FlutterActivity`.
 
 This is because `FlutterFragmentActivity` is AndroidX compatible and therefore supports the Activity Result API as required by
 Android Health Connect, whilst `FlutterActivity` is not.
 
+</Tab>
+</Tabs>
+
 ## Synchronization
 
 ### Sync On App Launch
 
-Because Android Health Connect disallowes any data access when the app is in background, your app must be regularly opened by the end user
-for data to be synchronized. Hence, the Vital SDK can only provide Sync On App Launch as the default automatic behaviour.
+When your app resumes from background (i.e., having no Activity), Vital Health SDK triggers a data sync on all the resources
+to which the user has granted read permission.
 
-This Sync On App Launch behaviour occurs as part of your Vital Health SDK configuration call:
+The SDK imposes a **2-minute** throttle on automatic data sync. This is to prevent rapid app switching from causing an
+excessive amount of data sync work being scheduled.
 
-* Native Android: `VitalHealthConnectManager.configureHealthConnectClient`
-* Flutter: `vital_health.configure`
-* React Native: `VitalHealth.configure`
+<Info>
+Vital Health SDK relies on the [AndroidX ProcessLifecycleOwner](https://developer.android.com/reference/androidx/lifecycle/ProcessLifecycleOwner)
+to get notified of your app's resumption.
+</Info>
 
-Before the call returns control to your application, the SDK checks whether that the Vital Core SDK has been signed in with a Vital user.
-If it does, it would automatically start an asynchronous job to synchronize all `VitalResource`s that are known to have permissions granted.
+### Running as Foreground Service
 
-### Ensure data sync can run to completion
+<Info>You cannot opt-out of this behaviour.</Info>
 
-<Warning>This API is only accessible in Android native code, as it is not expressible through the restrictive React Native and Flutter interop.</Warning>
+Vital Health SDK runs all its data sync workers inside a Foreground Service. Running as a foreground service helps in two ways:
 
-Because Android Health Connect does not allow any data reads while the request is in the background, any on-going synchronization can be
-easily disrupted by the end user putting your app into background.
+1. It ensures ongoing data sync can run to completion even if the user switches away from your app; and
 
-To mitigate this, the Vital Health SDK can run the data synchronization process as a [Foreground Service](https://developer.android.com/guide/components/foreground-services),
-ensuring uninterrupted Health Connect read access until the synchronization ends (sans any intervention by the OS). You can opt-in to this mode
-by supplying a `SyncNotificationBuilder` when you configure the Vital Health SDK.
+2. data sync workers have to be **in foreground** to read data from Health Connect. Health Connect prohibits
+   reading data from background.
 
-Note that the `SyncNotificationBuilder` is required for opt-in, since the Android OS requires every Foreground Service to be accompanied by
-a user-visible notification.
+Android requires every Foreground Service to [be associated with a user-visible notification](https://developer.android.com/develop/background-work/services/foreground-services#user-dismiss-notification).
+The OS typically grants a grace period of about 10 seconds before making the user aware of this notification. In other words,
+if the data sync worker completes within the grace period, no notification would be posted.
 
-#### Code example
-First, you can create a `SyncNotificationBuilder` class that returns a simple `Syncing {things}` message:
-```kotlin
+Vital Health SDK installs these notification copies by default:
+
+| Item | Copy |
+| ---- | ---- |
+| Notification Title | Health Data Sync |
+| Notification Content | `{APP_NAME}` is synchronizing with Health Connect... |
+| Channel Title | Health Data Sync |
+| Channel Description | Notifies when `{APP_NAME}` is synchronizing with Health Connect. |
+
+You can customize it through two ways:
+
+<Tabs>
+<Tab title="Native Android">
+
+Register your custom `SyncNotificationBuilder` with `VitalHealthConnectManager.syncNotificationBuilder` on App Startup.
+You could do this in an AndroidX Startup `Initializer` that lists the SDK `VitalHealthConnectInitializer` initializer as its dependency.
+
+```kotlin Native Android
 package io.tryvital.sample
 
 import android.app.Notification
@@ -198,12 +215,11 @@ import androidx.core.app.NotificationCompat
 import io.tryvital.vitalhealthconnect.SyncNotificationBuilder
 import io.tryvital.vitalhealthconnect.model.VitalResource
 
-object VitalSyncNotificationBuilder: SyncNotificationBuilder {
+object ExampleSyncNotificationBuilder: SyncNotificationBuilder {
     override fun build(context: Context, resources: Set<VitalResource>): Notification {
         return NotificationCompat.Builder(context, createChannel(context))
-            .setContentTitle("Vital Sync")
-            .setTicker("Vital Sync")
-            .setContentText("Syncing ${resources.map { it.toString() }.joinToString(", ")}")
+            .setContentTitle("Example Sync")
+            .setContentText("Syncing your data")
             .setOngoing(true)
             .setSmallIcon(android.R.drawable.ic_popup_sync)
             .build()
@@ -211,57 +227,36 @@ object VitalSyncNotificationBuilder: SyncNotificationBuilder {
 
     fun createChannel(context: Context): String {
         val importance = NotificationManager.IMPORTANCE_MIN
-        val mChannel = NotificationChannel("VitalSyncNotificationBuilder", "Vital Sync", importance)
-        mChannel.description = "Notifies when Vital is syncing your data"
+        val mChannel = NotificationChannel("ExampleSyncNotification", "Example Sync", importance)
+        mChannel.description = "Notifies when Example is syncing your data"
         val notificationManager = context.getSystemService(NOTIFICATION_SERVICE) as NotificationManager
         notificationManager.createNotificationChannel(mChannel)
         return mChannel.id
     }
 }
+
+// In your Startup Initializer
+val manager = VitalHealthConnectManager.getOrCreate(context)
+manager.syncNotificationBuilder = 
 ```
 
-Then you can make use of the [App Startup](https://developer.android.com/topic/libraries/app-startup) framework to
-consistently initialize the Vital Health SDK with your `SyncNotificationBuilder` during app startup:
+</Tab>
 
-<CodeGroup>
-```kotlin Initializer class
-package io.tryvital.sample
+<Tab title="React Native">
 
-import android.content.Context
-import androidx.startup.Initializer
-import io.tryvital.client.VitalClient
-import io.tryvital.vitalhealthconnect.VitalHealthConnectManager
+Register your custom copies through `VitalHealth.setSyncNotificationContent` as early as possible in
+your React Native root component.
 
-class VitalSDKInitializer : Initializer<VitalHealthConnectManager> {
-    override fun create(context: Context): VitalHealthConnectManager {
-        return VitalHealthConnectManager.getOrCreate(context).apply {
-            if (VitalClient.Status.SignedIn in VitalClient.status) {
-                configureHealthConnectClient(
-                    syncNotificationBuilder = VitalSyncNotificationBuilder
-                )
-            }
-        }
-    }
+```typescript
+import { VitalHealth } from '@tryvital/vital-health-react-native';
 
-    override fun dependencies(): List<Class<out Initializer<*>>> {
-        return emptyList()
-    }
-}
+await VitalHealth.setSyncNotificationContent({
+    "notificationTitle": "Example Sync",
+    "notificationContent": "Syncing your data",
+    "channelName": "Example Sync",
+    "channelDescription": "Notifies when Example is syncing your data"
+});
 ```
 
-```xml Android Manifest
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" ...>
-    <application ...>
-        <provider
-            android:name="androidx.startup.InitializationProvider"
-            android:authorities="${applicationId}.androidx-startup"
-            android:exported="false"
-            tools:node="merge">
-            <meta-data  android:name="io.tryvital.sample.VitalSDKInitializer"
-                android:value="androidx.startup" />
-        </provider>
-    </application>
-</manifest>
-```
-</CodeGroup>
+</Tab>
+</Tabs>
